src/objects/Debts_Expenses__c.object
<CustomObject>
    <description>Objects hols all data regarding debts and expenses related to the Applicant.</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field associates this Debt / Expenses record to the appropriate Application record</description>
        <inlineHelpText>Application related to this Debts / Expenses record</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Debts / Expenses</relationshipLabel>
        <relationshipName>Debts_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condo_HOA_Fees_Frequency__c</fullName>
        <label>Condo HOA Fees Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Frequency_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condo_HOA_Fees__c</fullName>
        <label>Condo HOA Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extraordinary_Expense_Description__c</fullName>
        <description>Description of Extraordinary expense</description>
        <inlineHelpText>e.g., medical costs, child care, alimony, tuition, etc.</inlineHelpText>
        <label>Extraordinary Expense Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extraordinary_Expense_Monthly_Payment__c</fullName>
        <label>Extraordinary Expense Monthly Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hazard_Insurance_Frequency__c</fullName>
        <label>Hazard Insurance Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Frequency_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hazard_Insurance__c</fullName>
        <label>Hazard Insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_Secured__c</fullName>
        <label>How Secured?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Included_in_MFD_Calc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not this Debt/Expense record was used in the calculation of Monthly Fixed Debt on the related Application</description>
        <label>Is Included in MFD Calc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landlord_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Landlord Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates the Debts / Expenses record to the appropriate Loan record</description>
        <inlineHelpText>Associates the Debts / Expenses record to the appropriate Loan record</inlineHelpText>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Debts / Expenses</relationshipLabel>
        <relationshipName>Debts_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Debts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Debts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Taxes_Frequency__c</fullName>
        <label>Real Estate Taxes Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Frequency_Value_Set</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_Estate_Taxes__c</fullName>
        <label>Real Estate Taxes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Property_Address__c</fullName>
        <encrypted>true</encrypted>
        <label>Rental Property Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Please ignore this field. It&apos;s for integration testing purposes.</description>
        <externalId>true</externalId>
        <inlineHelpText>Please ignore this field. It&apos;s for integration testing purposes.</inlineHelpText>
        <label>TestExtId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type_of_Debt__c</fullName>
        <label>Type of Debt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Debts / Expenses</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Debts / Expenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debts / Expenses</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>